--- a/tools/build-util/packageconfig.json
+++ b/tools/build-util/packageconfig.json
@@ -2,6 +2,7 @@
 	"Settings": {
 		"PackageProjects": [
 			"Mathtone.Sdk.Services",
+			"Mathtone.Sdk.Observables",
 			"Mathtone.Sdk.Common",
 			"Mathtone.Sdk.Logging",
 			"Mathtone.Sdk.Logging.Console",
@@ -14,7 +15,8 @@
 			"Mathtone.Sdk.Graphs",
 			"Mathtone.Sdk.Rng",
 			"Mathtone.Sdk.Time",
-			"Mathtone.Sdk.Patterns"
+			"Mathtone.Sdk.Patterns",
+			"Mathtone.Sdk.Reactive"
 		],
 		"PackageDirectory": "packages",
 		"Verbosity": "Quiet"
