--- a/src/sdk/Mathtone.Sdk.PackageUtilities/Mathtone.Sdk.PackageUtilities.csproj
+++ b/src/sdk/Mathtone.Sdk.PackageUtilities/Mathtone.Sdk.PackageUtilities.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Build" Version="17.4.0" />
+    <PackageReference Include="NuGet.Configuration" Version="6.4.0" />
+    <PackageReference Include="NuGet.Protocol" Version="6.4.0" />
+    <PackageReference Include="NuGet.Versioning" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Mathtone.Sdk.Graphs\Mathtone.Sdk.Graphs.csproj" />
+    <ProjectReference Include="..\Mathtone.Sdk.Secrets\Mathtone.Sdk.Secrets.csproj" />
+    <ProjectReference Include="..\Mathtone.Sdk.Services\Mathtone.Sdk.Services.csproj" />
+  </ItemGroup>
+
 </Project>
