Attempting CI/CD...

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,8 @@
 version: 2.1
-commands:
-  get-version:
-    steps:
-      - run:
-         name: Getting Package Version
-         command: |
-          branch=$CIRCLE_BRANCH
-          ver=${branch/"release/"/""}
-          suffix=${ver#*-}
-          build=${ver%-*}
-          vertag=""
-          if  [ $suffix == "" ] || [ $suffix == $build ]; then
-            echo NO SUFFIX
-            echo "export PKG_SFX_TAG=""" >> $BASH_ENV
-            vertag=NOPE
-          else
-            echo $"SUFFIX FOUND- {$suffix}"
-            vertag=$"--version-suffix $suffix"
-            echo $"VERSION TAG- $vertag"
-            echo "export PKG_SFX_TAG='$vertag'" >> $BASH_ENV
-          fi
-          
-          echo "export PKG_VER=$build" >> $BASH_ENV
-          echo "export PKG_SFX=$suffix" >> $BASH_ENV
-orbs:
-  sonarcloud: sonarsource/sonarcloud@1.0.3        
 jobs:
   get-code:
     docker:
-      - image: mcr.microsoft.com/dotnet/sdk:6.0
+      - image: mcr.microsoft.com/dotnet/sdk:7.0
     working_directory: /mnt/ramdisk
     steps:
       - checkout
@@ -38,7 +12,18 @@ jobs:
             - LICENSE.txt
             - src
             - tools
-      
+  build-tools:
+    docker:
+      - image: mcr.microsoft.com/dotnet/sdk:7.0
+    working_directory: /mnt/ramdisk
+    steps:
+      - attach_workspace:
+          at: .
+      - run: dotnet build tools/build-utilities/build-utilities.csproj --configuration Release --output temp
+      - persist_to_workspace:
+          root: .
+          paths:
+            - temp
   integration-tests:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
@@ -119,41 +104,44 @@ workflows:
   build-release:
     jobs:
       - get-code
-      - integration-tests:
-          context: MATHTONE_DEV
-          requires:
+      - build-tools:
+         requires:
             - get-code
-      - disintegration-tests:
-          filters:
-            branches:
-               only:
-                  - /release.*/
-          context: MATHTONE_DEV
-          requires:
-            - get-code 
-      - publish-artifactory:
-          filters:
-            branches:
-               only:
-                  - /release.*/
-          context: MATHTONE_DEV
-          requires:
-            - integration-tests
-            - disintegration-tests
-      - approve-ship:
-          filters:
-            branches:
-               only:
-                  - /release.*/
-          context: MATHTONE_DEV
-          type: approval
-          requires:
-            - publish-artifactory
-      - publish-nuget:
-          filters:
-            branches:
-               only:
-                  - /release.*/
-          context: MATHTONE_DEV
-          requires:
-            - approve-ship
+      #- integration-tests:
+      #    context: MATHTONE_DEV
+      #    requires:
+      #      - get-code
+      #- disintegration-tests:
+      #    filters:
+      #      branches:
+      #         only:
+      #            - /release.*/
+      #    context: MATHTONE_DEV
+      #    requires:
+      #      - get-code 
+      #- publish-artifactory:
+      #    filters:
+      #      branches:
+      #         only:
+      #            - /release.*/
+      #    context: MATHTONE_DEV
+      #    requires:
+      #      - integration-tests
+      #      - disintegration-tests
+      #- approve-ship:
+      #    filters:
+      #      branches:
+      #         only:
+      #            - /release.*/
+      #    context: MATHTONE_DEV
+      #    type: approval
+      #    requires:
+      #      - publish-artifactory
+      #- publish-nuget:
+      #    filters:
+      #      branches:
+      #         only:
+      #            - /release.*/
+      #    context: MATHTONE_DEV
+      #    requires:
+      #      - approve-ship
