--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
     working_directory: /mnt/ramdisk
     steps:
       - checkout
+      - run: ls -l
       - persist_to_workspace:
           root: .
           paths:
@@ -19,6 +20,7 @@ jobs:
     steps:
       - attach_workspace:
           at: .
+      - run: ls -l
       - run: dotnet build tools/build-utilities/build-utilities.csproj --configuration Release --output temp
       - run: dotnet temp/build-utilities.dll ./solutionconfig.json
       - persist_to_workspace:
