--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
       - attach_workspace:
           at: .
       - run: dotnet build tools/build-utilities/build-utilities.csproj --configuration Release --output temp
+      - run: git fetch --all
       - run: dotnet temp/build-utilities.dll ./solutionconfig.json
       - persist_to_workspace:
           root: .
