--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,9 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - run: ls -l
-      - run: dotnet build tools/build-utilities/build-utilities.csproj --configuration Release --output temp
-      - run: dotnet temp/build-utilities.dll ./solutionconfig.json
+      # - run: ls -l
+      # - run: dotnet build tools/build-utilities/build-utilities.csproj --configuration Release --output temp
+      # - run: dotnet temp/build-utilities.dll ./solutionconfig.json
       - persist_to_workspace:
           root: .
           paths:
