--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,10 +27,10 @@ jobs:
       # - run: ls -l
       # - run: dotnet build tools/build-utilities/build-utilities.csproj --configuration Release --output temp
       # - run: dotnet temp/build-utilities.dll ./solutionconfig.json
-      - persist_to_workspace:
-          root: .
-          paths:
-            - temp
+      # - persist_to_workspace:
+      #     root: .
+      #     paths:
+      #       - temp
   integration-tests:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
