--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,9 @@ jobs:
     working_directory: /mnt/ramdisk
     steps:
       - checkout
+      - add_ssh_keys:
+         fingerprints:
+         - "f6:ba:a8:50:a5:01:e0:96:b1:83:38:38:12:8a:c3:34"
       - run: ls -l
       - run: git fetch --all
       - run: dotnet build tools/build-utilities/build-utilities.csproj --configuration Release --output temp
