--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ jobs:
       - checkout
       - run: ls -l
       # - run: git fetch --all
-      # - run: dotnet build tools/build-utilities/build-utilities.csproj --configuration Release --output temp
-      # - run: dotnet temp/build-utilities.dll ./solutionconfig.json
+      - run: dotnet build tools/build-utilities/build-utilities.csproj --configuration Release --output temp
+      - run: dotnet temp/build-utilities.dll ./solutionconfig.json
       - persist_to_workspace:
           root: .
           paths:
