--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,8 @@ jobs:
 workflows:
   build-release:
     jobs:
-      - get-code
+      - get-code:
+         context: MATHTONE_DEV
       - build-tools:
          requires:
             - get-code
