--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,6 @@ jobs:
          fingerprints:
          - "f6:ba:a8:50:a5:01:e0:96:b1:83:38:38:12:8a:c3:34"
       - run: ls -l
-      # - run: git fetch --all
       - run: dotnet build tools/build-utilities/build-utilities.csproj --configuration Release --output temp
       - run: dotnet temp/build-utilities.dll ./solutionconfig.json
       - persist_to_workspace:
@@ -28,6 +27,7 @@ jobs:
       - attach_workspace:
           at: .
       - run: ls -l
+      - run: cat ./create-packages.sh 
       # - run: dotnet build tools/build-utilities/build-utilities.csproj --configuration Release --output temp
       # - run: dotnet temp/build-utilities.dll ./solutionconfig.json
       # - persist_to_workspace:
