--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run: ls -l
       - run: cat ./create-packages.sh 
       - run: bash ./create-packages.sh 
-      - run: ls -l /packages
+      - run: ls -l packages
       # - run: dotnet build tools/build-utilities/build-utilities.csproj --configuration Release --output temp
       # - run: dotnet temp/build-utilities.dll ./solutionconfig.json
       # - persist_to_workspace:
