--- a/src/sdk/Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
+++ b/src/sdk/Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
@@ -4,6 +4,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Description>Fluent simple database access.</Description>
+    <CodeAnalysisRuleSet>..\..\.sonarlint\mathtone_mathtone-magiccsharp.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="..\..\.sonarlint\mathtone_mathtone-magic\CSharp\SonarLint.xml" Link="SonarLint.xml" />
+  </ItemGroup>
 
 </Project>
