--- a/src/sdk/Mathtone.Sdk.Reactive/Mathtone.Sdk.Reactive.csproj
+++ b/src/sdk/Mathtone.Sdk.Reactive/Mathtone.Sdk.Reactive.csproj
@@ -4,7 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <CodeAnalysisRuleSet>..\..\.sonarlint\mathtone_mathtone-magiccsharp.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="..\..\.sonarlint\mathtone_mathtone-magic\CSharp\SonarLint.xml" Link="SonarLint.xml" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Reactive.Linq" Version="5.0.0" />
