--- a/src/sdk/Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
+++ b/src/sdk/Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
@@ -4,7 +4,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Description>Common services and extensions.</Description>
+    <CodeAnalysisRuleSet>..\..\.sonarlint\mathtone_mathtone-magiccsharp.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="..\..\.sonarlint\mathtone_mathtone-magic\CSharp\SonarLint.xml" Link="SonarLint.xml" />
+  </ItemGroup>
 
 
 </Project>
