--- a/tools/Mathtone.Secrets/Mathtone.Secrets.csproj
+++ b/tools/Mathtone.Secrets/Mathtone.Secrets.csproj
@@ -5,7 +5,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <UserSecretsId>a98f9560-96c9-4c1b-a34c-bc6bbd22012b</UserSecretsId>
+    <CodeAnalysisRuleSet>..\..\src\.sonarlint\mathtone_mathtone-magiccsharp.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="..\..\src\.sonarlint\mathtone_mathtone-magic\CSharp\SonarLint.xml" Link="SonarLint.xml" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
