--- a/src/tests/Mathtone.Sdk.Reactive.Tests/Mathtone.Sdk.Reactive.Tests.csproj
+++ b/src/tests/Mathtone.Sdk.Reactive.Tests/Mathtone.Sdk.Reactive.Tests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+    <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
     <PackageReference Include="System.Reactive.Linq" Version="5.0.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
