Added Neural Net package.

--- a/tools/build-util/packageconfig.json
+++ b/tools/build-util/packageconfig.json
@@ -1,6 +1,7 @@
 {
 	"Settings": {
 		"PackageProjects": [
+			"Mathtone.Sdk.NeuralNetworks",
 			"Mathtone.Sdk.Services",
 			"Mathtone.Sdk.Observables",
 			"Mathtone.Sdk.Common",
