--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,10 +111,10 @@ jobs:
    steps:
       - attach_workspace:
           at: .
-   run: |
-      dotnet sonarscanner begin  /o:mathtone /k:mathtone_mathtone-magic /d:sonar.host.url=https://sonarcloud.io
-      dotnet test src/mathtone-magic.sln --configuration Release -- xunit.parallelizeAssembly=true
-      dotnet sonarscanner end
+      - run: |
+         dotnet sonarscanner begin  /o:mathtone /k:mathtone_mathtone-magic /d:sonar.host.url=https://sonarcloud.io
+         dotnet test src/mathtone-magic.sln --configuration Release -- xunit.parallelizeAssembly=true
+         dotnet sonarscanner end
   publish-nuget:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
