--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,15 +106,13 @@ jobs:
   #           ls -l packages
   #           dotnet nuget push packages/*.nupkg --source Mathtone-Dev
   sonar-pulse-one-ping-onleh:
-   docker:
-      - image: mcr.microsoft.com/dotnet/sdk:6.0
-   steps:
-      - attach_workspace:
-          at: .
-      - run: |
-         dotnet sonarscanner begin  /o:mathtone /k:mathtone_mathtone-magic /d:sonar.host.url=https://sonarcloud.io
-         dotnet test src/mathtone-magic.sln --configuration Release -- xunit.parallelizeAssembly=true
-         dotnet sonarscanner end
+    docker:
+       - image: mcr.microsoft.com/dotnet/sdk:6.0
+    steps:
+       - attach_workspace:
+           at: .
+       - run: dotnet test src/mathtone-magic.sln --configuration Release -- xunit.parallelizeAssembly=true
+       - sonarcloud/scan
   publish-nuget:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
