--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,7 +120,8 @@ jobs:
     steps:
        - attach_workspace:
            at: .
-       - run: sudo apt install unzip
+       - run: apt update
+       - run: apt-get install unzip
        - run: dotnet test src/mathtone-magic.sln --configuration Release -- xunit.parallelizeAssembly=true
        - sonarcloud/scan
   publish-nuget:
