--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
           POSTGRES_PASSWORD: test!1234
       - image: mcr.microsoft.com/mssql/server:2022-latest
         environment:
-          MSSQL_SA_PASSWORD: Test!1234
+          MSSQL_SA_PASSWORD: test!1234
           ACCEPT_EULA: Y
     working_directory: /mnt/ramdisk
     steps:
@@ -66,7 +66,7 @@ jobs:
           POSTGRES_PASSWORD: test!1234
       - image: mcr.microsoft.com/mssql/server:2022-latest
         environment:
-          MSSQL_SA_PASSWORD: Test!1234
+          MSSQL_SA_PASSWORD: test!1234
           ACCEPT_EULA: Y
     working_directory: /mnt/ramdisk
     steps:
