--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,8 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - run: ls /src -l
+      - run: ls -l
+      - run: ls ./src -l
       - run: dotnet test src/mathtone-magic.sln --configuration Release -- xunit.parallelizeAssembly=true
       #- sonarcloud/scan
 
