--- a/tools/build-util/packageconfig.json
+++ b/tools/build-util/packageconfig.json
@@ -17,7 +17,10 @@
 			"Mathtone.Sdk.Rng",
 			"Mathtone.Sdk.Time",
 			"Mathtone.Sdk.Patterns",
-			"Mathtone.Sdk.Reactive"
+			"Mathtone.Sdk.Reactive",
+			"Mathtone.Sdk.Telemetry",
+			"Mathtone.Sdk.Telemetry.Abstractions",
+			"Mathtone.Sdk.Telemetry.Generators"
 		],
 		"PackageDirectory": "packages",
 		"Verbosity": "Quiet"
