--- a/src/tests/Mathtone.Sdk.Telemetry.Tests/Mathtone.Sdk.Telemetry.Tests.csproj
+++ b/src/tests/Mathtone.Sdk.Telemetry.Tests/Mathtone.Sdk.Telemetry.Tests.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.SourceGenerators.Testing.XUnit" Version="1.1.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Testing.Verifiers.XUnit" Version="1.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.6.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3">
@@ -22,7 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\sdk\Mathtone.Sdk.Graphs\Mathtone.Sdk.Graphs.csproj" />
+    <ProjectReference Include="..\..\sdk\Mathtone.Sdk.Telemetry.Generators\Mathtone.Sdk.Telemetry.Generators.csproj" />
+    <ProjectReference Include="..\..\sdk\Mathtone.Sdk.Telemetry\Mathtone.Sdk.Telemetry.csproj" />
     <ProjectReference Include="..\..\sdk\Mathtone.Sdk.Testing.Xunit\Mathtone.Sdk.Testing.Xunit.csproj" />
   </ItemGroup>
 
