--- a/tests/Mathtone.Sdk.Telemetry.Tests/Mathtone.Sdk.Telemetry.Tests.csproj
+++ b/tests/Mathtone.Sdk.Telemetry.Tests/Mathtone.Sdk.Telemetry.Tests.csproj
@@ -6,9 +6,11 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.6.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3">
@@ -22,8 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\sdk\Mathtone.Sdk.Graphs\Mathtone.Sdk.Graphs.csproj" />
-    <ProjectReference Include="..\..\sdk\Mathtone.Sdk.Testing.Xunit\Mathtone.Sdk.Testing.Xunit.csproj" />
+    <ProjectReference Include="..\..\src\sdk\Mathtone.Sdk.Telemetry.Generators\Mathtone.Sdk.Telemetry.Generators.csproj" />
+    <ProjectReference Include="..\..\src\sdk\Mathtone.Sdk.Telemetry\Mathtone.Sdk.Telemetry.csproj" />
+    <ProjectReference Include="..\..\src\sdk\Mathtone.Sdk.Testing.Xunit\Mathtone.Sdk.Testing.Xunit.csproj" />
   </ItemGroup>
 
 </Project>
