--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
   get-code:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
+      - image: mcr.microsoft.com/dotnet/sdk:8.0
     working_directory: /mnt/ramdisk
     steps:
       - checkout
@@ -41,6 +42,7 @@ jobs:
       
   integration-tests:
     docker:
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
       - image: mcr.microsoft.com/dotnet/sdk:8.0
       - image: postgres
         environment:
@@ -62,6 +64,7 @@ jobs:
 
   disintegration-tests:
     docker:
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
       - image: mcr.microsoft.com/dotnet/sdk:8.0
       - image: postgres
         environment:
@@ -111,6 +114,7 @@ jobs:
 
   publish-nuget:
     docker:
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
       - image: mcr.microsoft.com/dotnet/sdk:8.0
     steps:
       - attach_workspace:
