--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
   get-code:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
+      - image: mcr.microsoft.com/dotnet/sdk:8.0
     working_directory: /mnt/ramdisk
     steps:
       - checkout
@@ -42,6 +43,7 @@ jobs:
   integration-tests:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
+      - image: mcr.microsoft.com/dotnet/sdk:8.0
       - image: postgres
         environment:
           POSTGRES_USER: postgres
@@ -63,6 +65,7 @@ jobs:
   disintegration-tests:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
+      - image: mcr.microsoft.com/dotnet/sdk:8.0
       - image: postgres
         environment:
           POSTGRES_USER: postgres
@@ -112,6 +115,7 @@ jobs:
   publish-nuget:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
+      - image: mcr.microsoft.com/dotnet/sdk:8.0
     steps:
       - attach_workspace:
           at: .
