Add create-packages job to build-release workflow
This commit introduces the `create-packages` job in the `build-release` workflow of the `config.yml` file. The new job is dependent on the completion of the `get-code` job and is positioned before the `integration-tests` job, which also has the same requirement.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,7 +144,9 @@ workflows:
   build-release:
     jobs:
       - get-code
-      - create-packages
+      - create-packages:
+            requires:
+                - get-code
       - integration-tests:
           context: MATHTONE_DEV
           requires:
