--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - ./packages
+            - packages
 
   disintegration-tests:
     docker:
